// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declare-getter.ts [typescript] format 1`] = `
"'declare' is not allowed in getters. (1:12)
> 1 | class Foo {
    |            ^
> 2 |   declare get foo()
    | ^^^^^^^^^^
  3 | }
  4 |"
`;

exports[`declare-setter.ts [typescript] format 1`] = `
"'declare' is not allowed in setters. (1:12)
> 1 | class Foo {
    |            ^
> 2 |   declare set foo(v)
    | ^^^^^^^^^^
  3 | }
  4 |"
`;

exports[`default-escaped.ts [typescript] format 1`] = `
"Declaration or statement expected. (1:1)
> 1 | export asyn\\u{63} from "async";
    | ^
  2 |"
`;

exports[`export-declare.ts [typescript] format 1`] = `
"Declaration or statement expected. (1:1)
> 1 | export declare foo;
    | ^
  2 |"
`;

exports[`invalid-jsx-1.ts [typescript] format 1`] = `
"Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`? (3:45)
  1 | // https://www.typescriptlang.org/docs/handbook/release-notes/typescript-3-9.html#-and--are-now-invalid-jsx-text-characters
  2 |
> 3 | let directions = <div>Navigate to: Menu Bar > Tools > Options</div>
    |                                             ^
  4 |"
`;

exports[`module-attributes-static.ts [typescript] format 1`] = `
"';' expected. (1:28)
> 1 | import foo from "foo.json" with type: "json";
    |                            ^
  2 |"
`;

exports[`newline-before-arrow.ts [typescript] format 1`] = `
"Unexpected keyword or identifier. (1:1)
> 1 | async x
    | ^
  2 | => x
  3 |"
`;

exports[`snippet: #0 [typescript] format 1`] = `
"Unexpected token. Did you mean \`{'}'}\` or \`&rbrace;\`? (1:15)
> 1 | let x1 = <div>}</div>;
    |               ^"
`;

exports[`snippet: #1 [typescript] format 1`] = `
"Unexpected token. Did you mean \`{'>'}\` or \`&gt;\`? (1:15)
> 1 | let x2 = <div>></div>;
    |               ^"
`;

exports[`snippet: #2 [typescript] format 1`] = `
"':' expected. (1:21)
> 1 | let x3 = <div>{"foo"}}</div>;
    |                     ^"
`;

exports[`snippet: #3 [typescript] format 1`] = `
"':' expected. (1:21)
> 1 | let x4 = <div>{"foo"}></div>;
    |                     ^"
`;

exports[`snippet: #4 [typescript] format 1`] = `
"Expression expected. (1:15)
> 1 | let x5 = <div>}{"foo"}</div>;
    |               ^"
`;

exports[`snippet: #5 [typescript] format 1`] = `
"Expression expected. (1:15)
> 1 | let x6 = <div>>{"foo"}</div>;
    |               ^"
`;

exports[`snippet: #6 [typescript] format 1`] = `
"This modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   abstract e();
    | ^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #7 [typescript] format 1`] = `
"This modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   declare e();
    | ^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #8 [typescript] format 1`] = `
"This modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   export e();
    | ^^^^^^^^^
  3 | }"
`;

exports[`snippet: #9 [typescript] format 1`] = `
"This modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   static e();
    | ^^^^^^^^^
  3 | }"
`;

exports[`snippet: #10 [typescript] format 1`] = `
"This modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   private e();
    | ^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #11 [typescript] format 1`] = `
"This modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   protected e();
    | ^^^^^^^^^^^^
  3 | }"
`;

exports[`snippet: #12 [typescript] format 1`] = `
"This modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   public e();
    | ^^^^^^^^^
  3 | }"
`;

exports[`snippet: #13 [typescript] format 1`] = `
"This modifier cannot appear on a type member (1:16)
> 1 | interface Foo {
    |                ^
> 2 |   readonly e();
    | ^^^^^^^^^^^
  3 | }"
`;

exports[`value-of-abstract-property.ts [typescript] format 1`] = `
"Abstract property cannot have an initializer (2:3)
  1 | abstract class Foo {
> 2 |   abstract prop = 3;
    |   ^^^^^^^^^^^^^^^^^^
  3 | }
  4 |"
`;
